# ornaments

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  Makefile.venv  README.md  compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
.devcontainer/: devcontainer.json
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yaml  python-checks.yaml
docs/: conf.py  index.rst
src/ornaments/: __init__.py  __version__.py  _exceptions.py  _types.py  _utils.py  _warnings.py  decorators.py  exceptions.py  scopes.py
src/ornaments/helpers/: __init__.py  catch_all_exceptions.py  exception_catching.py  normalized_exceptions.py  retry.py
src/ornaments/invariants/: __init__.py  conditional_execution.py  only_called_once.py
src/ornaments/limiters/: __init__.py  execution_time_limit.py
src/ornaments/limits/: call_limit.py
src/ornaments/logging/: log_calls.py  log_execution_time.py  log_return.py  log_value.py
src/ornaments/markers/: deprecated.py
src/ornaments/monitoring/: __init__.py  monitored_attribute.py  monitored_calls.py
src/ornaments/runtime_checks/: __init__.py  checked_return_type.py  parameter_validation.py  return_type_validation.py
src/ornaments/safety/: fallback_function.py
src/python_template_repo/: Dockerfile  __init__.py  __metadata__.py  __version__.py  _exceptions.py  _types.py
src/python_template_repo/cli/: __init__.py  __main__.py  cli.py  config.py  spinner.py
src/python_template_repo/utils/: logging.py
tests/: conftest.py  helpers.py  test_decorators.py  test_exceptions.py  test_package.py
tests/cli/: conftest.py  test_cli.py
tests/decorators/: test_only_called_once.py
tests/helpers/: test_exception_catching.py
tests/invariants/: test_conditional_execution.py  test_only_called_once.py
tests/runtime_checks/: test_return_type_validation.py
tests/utils/: conftest.py  test_logging.py
